# design-patterns-explained

./: .gitignore  README.md
mvc/: bloggy.json  package.json
mvc/app/: index.js
mvc/app/controllers/: comment.controller.js  controller_helper.js  home.controller.js  post.controller.js  user.controller.js
mvc/app/models/: database.js  model.js  post.model.js  user.model.js
mvc/public/css/: style.css
mvc/public/scripts/users/: sign_up.js
mvc/public/views/: layout.ejs
mvc/public/views/pages/: index.ejs
mvc/public/views/pages/home/: _signed_in.ejs  _signed_out.ejs
mvc/public/views/pages/posts/: _form.ejs  form.ejs  show.ejs
mvc/public/views/pages/users/: edit.ejs  sign_in.ejs  sign_up.ejs
mvc/public/views/partials/: footer.ejs  head.ejs  libs.ejs  navbar.ejs
strategy/: .directory  CMakeLists.txt  README.md  repro.sh  strategy.sln
strategy/scripts/: debug.sh  deploy.sh  run.sh  test.sh
strategy/src/: PaintBrushStrategy.cpp  Source.cpp  button.cpp  button.h  canvas.cpp  canvas.h  constants.h  main.cpp  tool_type_strategy.h
strategy/src/tool_strategy/: eraser_tool_strategy.cpp  fill_bucket_tool_strategy.cpp  line_tool_strategy.cpp  paint_brush_strategy.cpp  pencil_tool_strategy.cpp  spray_can_strategy.cpp  square_tool_strategy.cpp  tool_type_strategy.h
